--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/activity_reserva_sala.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,17 +10,12 @@
     android:orientation="vertical">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/corBranco">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/corBranco">
+
 
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
@@ -29,7 +24,7 @@
              <androidx.appcompat.widget.Toolbar
               android:id="@+id/toolbar2"
               android:layout_width="match_parent"
-              android:layout_height="100dp"
+              android:layout_height="95dp"
               android:background="?attr/colorPrimary"
               android:minHeight="?attr/actionBarSize"
               android:theme="?attr/actionBarTheme"
@@ -127,7 +122,7 @@
         android:layout_margin="8dp"
         android:background="@drawable/borda_sombreada"
          app:layout_constraintTop_toBottomOf="@id/tx_caracteristicas_sala"
-        android:visibility="visible">
+        android:visibility="gone">
 
 
 
@@ -247,22 +242,18 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-        <ListView
+   <ListView
             android:id="@+id/listViewReservas"
-            tools:listitem="@layout/item_lista_reservas"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </ListView>
+            android:layout_height="match_parent"
+            android:divider="@null"
+            tools:listitem="@layout/item_lista_reservas">
+
+   </ListView>
 
     </LinearLayout>
 
+       </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</ScrollView>
