--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
@@ -6,12 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/corBranco">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_reserva"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/borda_sombreada">
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/corBranco">
+            android:background="#f0f0f0">
+
+
 
             <TextView
                 android:id="@+id/item_nome_sala"
@@ -53,7 +60,7 @@
                     android:padding="5dp"
                     android:textAlignment="textStart"
                     android:textColor="@color/corBack"
-                    app:layout_constraintTop_toBottomOf="@id/item_datahora_inicial"
+                    app:layout_constraintTop_toBottomOf="@+id/item_datahora_inicial"
                     android:textColorHint="@android:color/black"
                     tools:ignore="MissingConstraints">
 
@@ -74,9 +81,7 @@
                 tools:ignore="MissingConstraints" />
 
 
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
+</androidx.cardview.widget.CardView>
 </LinearLayout>
