--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/item_lista_reservas.xml
@@ -8,15 +8,15 @@
     android:background="@color/corBranco">
     <androidx.cardview.widget.CardView
         android:id="@+id/card_reserva"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        app:cardCornerRadius="10dp"
         android:background="@drawable/borda_sombreada">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#f0f0f0">
+            android:layout_height="match_parent">
 
 
 
