--- a/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
+++ b/ReservaWiseRoom/TesteLayout/app/src/main/res/layout/fragment_lista_reserva.xml
@@ -28,6 +28,7 @@
     <ListView
         android:id="@+id/listViewReservas"
         tools:listitem="@layout/item_lista_reservas"
+        android:divider="@null"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
